--- a/src/app/components/filter-table/filter-table.component.html
+++ b/src/app/components/filter-table/filter-table.component.html
@@ -4,19 +4,19 @@
     <!-- Position Column -->
     <ng-container matColumnDef="filterName">
       <th mat-header-cell [ngStyle]="{'width.%': 20}" *matHeaderCellDef> Filter Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.id }} </td>
+      <td mat-cell *matCellDef="let element"> {{element.filterName }} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="criteria">
       <th mat-header-cell [ngStyle]="{'width.%': 20}" *matHeaderCellDef> Criteria </th>
-      <td mat-cell *matCellDef="let element"> {{element.criteriaId}} </td>
+      <td mat-cell *matCellDef="let element"> {{ getCriteriaName(element.criteriaId) }} </td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="condition">
       <th mat-header-cell [ngStyle]="{'width.%': 20}" *matHeaderCellDef> Condition </th>
-      <td mat-cell *matCellDef="let element"> {{element.conditionId}} </td>
+      <td mat-cell *matCellDef="let element"> {{ getConditionName(element.conditionId) }} </td>
     </ng-container>
 
     <!-- Symbol Column -->
