--- a/src/app/components/filter-table/filter-table.component.html
+++ b/src/app/components/filter-table/filter-table.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="app__toolbar">
   <div class="app__toolbar_container">
     <span class="app__toolbar_container-text">Wisercat filter</span>
-    <button mat-raised-button color="accent">Add filter</button>
+    <button mat-raised-button color="accent" (click)="onAdd()">Add filter</button>
   </div>
 </mat-toolbar>
 
