--- a/src/app/components/filter-modal/filter-modal.component.html
+++ b/src/app/components/filter-modal/filter-modal.component.html
@@ -1,1 +1,40 @@
-<p>filter-modal works!</p>
+<h1 mat-dialog-title>Add Filter</h1>
+<hr>
+<br>
+
+<mat-dialog-content class="dialog-content">
+
+  <div class="example-container">
+    <form [formGroup]="options">
+
+      <mat-form-field appearance="fill"
+                      [hideRequiredMarker]="hideRequiredControl.value"
+                      [floatLabel]="floatLabelControl.value">
+        <input matInput placeholder="Simple placeholder" required>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill" [floatLabel]="floatLabelControl.value">
+        <mat-label>Both a label and a placeholder</mat-label>
+        <input matInput placeholder="Simple placeholder">
+      </mat-form-field>
+
+      <mat-form-field appearance="fill"
+                      [hideRequiredMarker]="hideRequiredControl.value"
+                      [floatLabel]="floatLabelControl.value">
+        <mat-select required>
+          <mat-option>-- None --</mat-option>
+          <mat-option value="option">Option</mat-option>
+        </mat-select>
+        <mat-label>label</mat-label>
+      </mat-form-field>
+    </form>
+  </div>
+</mat-dialog-content>
+
+<mat-dialog-actions>
+  <button mat-button mat-dialog-close>Cancel</button>
+  <!--  <button mat-button [ngClass]="isFormValid ? 'save-button' : 'save-button-disabled'"-->
+  <!--          [disabled]="!isFormValid" [mat-dialog-close]="saveFormValues()">Save-->
+  <!--  </button>-->
+  <button mat-button>Save</button>
+</mat-dialog-actions>
