--- a/src/app/components/filter-modal/filter-modal.component.html
+++ b/src/app/components/filter-modal/filter-modal.component.html
@@ -13,45 +13,54 @@
         <mat-error>Filter Name cannot be empty</mat-error>
       </mat-form-field>
 
-<div>
-  <mat-form-field appearance="outline" floatLabel="never">
-    <mat-select placeholder="Criteria" formControlName="criteriaId" (selectionChange)="onChange($event)" >
+  <div>
 
-      <mat-option *ngFor="let criterion of data.criteria"
-                  value="{{ criterion.id }}"> {{ criterion.criteriaText }}</mat-option>
-    </mat-select>
-    <mat-error>Criteria required</mat-error>
-  </mat-form-field>
+      <div>
+        <mat-form-field appearance="outline" floatLabel="never">
+          <mat-select [(ngModel)]="defaultAmount" placeholder="Criteria" formControlName="criteriaId"
+                      (selectionChange)="onChange($event)">
 
-  <mat-form-field appearance="outline" floatLabel="never">
-    <mat-select placeholder="Condition" formControlName="conditionId">
+            <mat-option *ngFor="let criterion of data.criteria"
+                        [value]="criterion.id"> {{ criterion.criteriaText }}</mat-option>
+          </mat-select>
+          <mat-error>Criteria required</mat-error>
+        </mat-form-field>
 
-      <mat-option *ngFor="let condition of allConditions"
-                  value="{{ condition.id }}"> {{ condition.conditionText }}</mat-option>
-    </mat-select>
-    <mat-error>Criteria required</mat-error>
-  </mat-form-field>
+        <mat-form-field appearance="outline" floatLabel="never">
+          <mat-select placeholder="Condition" formControlName="conditionId">
+
+            <mat-option *ngFor="let condition of allConditions"
+                        value="{{ condition.id }}"> {{ condition.conditionText }}</mat-option>
+          </mat-select>
+          <mat-error>Criteria required</mat-error>
+        </mat-form-field>
 
 
+        <mat-form-field [ngClass]="{ 'hidden': defaultAmount != 1 }" class="example-full-width" appearance="outline">
+          <mat-label>Amount Value</mat-label>
+          <input matInput placeholder="Amount value" formControlName="amountValue">
+        </mat-form-field>
 
-<!--  <mat-form-field *ngIf="!hideAmountValue" class="example-full-width" appearance="fill">-->
-<!--    <mat-label>Amount Value</mat-label>-->
-<!--    <input matInput placeholder="Amount value" formControlName="amountValue">-->
-<!--  </mat-form-field>-->
+        <mat-form-field [ngClass]="{ 'hidden': defaultAmount != 2 }" class="example-full-width" appearance="outline">
+          <mat-label>Title Value</mat-label>
+          <input matInput placeholder="Title value" formControlName="titleValue">
+        </mat-form-field>
 
-<!--  <mat-form-field *ngIf="!hideTitleValue" class="example-full-width" appearance="fill">-->
-<!--    <mat-label>Title Value</mat-label>-->
-<!--    <input matInput placeholder="Title value" formControlName="titleValue">-->
-<!--  </mat-form-field>-->
+        <mat-form-field [ngClass]="{ 'hidden': defaultAmount != 3 }" appearance="outline">
+          <mat-label>Date Value</mat-label>
+          <input matInput [matDatepicker]="dp3" formControlName="dateValue">
+          <mat-datepicker-toggle matSuffix [for]="dp3"></mat-datepicker-toggle>
+          <mat-datepicker #dp3 disabled="false"></mat-datepicker>
+        </mat-form-field>
+      </div>
 
-<!--  <mat-form-field *ngIf="!hideDateValue" appearance="fill">-->
-<!--    <mat-label>Date Value</mat-label>-->
-<!--    <input matInput [matDatepicker]="dp3" formControlName="dateValue">-->
-<!--    <mat-datepicker-toggle matSuffix [for]="dp3"></mat-datepicker-toggle>-->
-<!--    <mat-datepicker #dp3 disabled="false" ></mat-datepicker>-->
-<!--  </mat-form-field>-->
+    <mat-radio-group formControlName="selection">
+      <mat-radio-button  *ngFor="let selectItem of selectList"
+                        [value]="selectItem.id"> {{ selectItem.selectText }}
+      </mat-radio-button>
+    </mat-radio-group>
 
-</div>
+  </div>
 
 
     </form>
@@ -63,5 +72,5 @@
   <button mat-button [ngClass]="isFormValid ? 'save-button' : 'save-button-disabled'"
           [disabled]="!isFormValid" [mat-dialog-close]="saveFormValues()">Save
   </button>
-<!--  <button mat-button>Save</button>-->
+  <!--  <button mat-button>Save</button>-->
 </mat-dialog-actions>
