--- a/src/app/components/filter-modal/filter-modal.component.css
+++ b/src/app/components/filter-modal/filter-modal.component.css
@@ -29,4 +29,24 @@
   display: none;
 }
 
+.mat-mini-fab.mat-accent {
+  background-color: #2196F3;
+  color: white;
+}
+
+.button__padding {
+  margin: 5px 5px 5px 6px;
+  /*top: 50%;*/
+  transform: translateY(-20%);
+  -ms-transform: translateY(-20%);
+  -moz-transform: translateY(-20%);
+  -webkit-transform: translateY(-20%);
+  -o-transform: translateY(-20%);
+}
+
+.plus-button{
+  margin: 0 0 0 8px;
+}
+
+
 
