--- a/src/app/components/filter-modal/filter-modal.component.html
+++ b/src/app/components/filter-modal/filter-modal.component.html
@@ -16,7 +16,7 @@
 
 
 
-        <div>
+        <div *ngFor="let group of formArray.controls;let i = index" [formGroup]=formArrayControls[i]>
           <mat-form-field appearance="outline" floatLabel="never">
             <mat-select [(ngModel)]="defaultAmount" placeholder="Criteria" formControlName="criteriaId"
                         (selectionChange)="onChange($event)">
