--- a/src/app/components/filter-table/filter-table.component.html
+++ b/src/app/components/filter-table/filter-table.component.html
@@ -30,7 +30,7 @@
     <!-- Symbol Column -->
     <ng-container matColumnDef="value">
       <th mat-header-cell [ngStyle]="{'width.%': 20}" *matHeaderCellDef> Value </th>
-      <td mat-cell *matCellDef="let element">{{element.amountValue}} {{element.titleValue}} {{element.dateValue}} </td>
+      <td mat-cell *matCellDef="let element">{{element.amountValue}} {{element.titleValue}} {{normalDate(element.dateValue)}} </td>
     </ng-container>
 
     <ng-container matColumnDef="selection">
