--- a/src/app/components/filter-modal/filter-modal.component.html
+++ b/src/app/components/filter-modal/filter-modal.component.html
@@ -57,8 +57,8 @@
             <mat-icon>add</mat-icon>
           </button>
 
-          <button class="button__padding" mat-mini-fab color="accent" aria-label="Add new line">
-<!--                            (click)="onRemoveFilterLine()">-->
+          <button class="button__padding" mat-mini-fab color="accent" aria-label="Add new line"
+                            (click)="onRemoveFilterLine(i)">
             <mat-icon>remove</mat-icon>
           </button>
         </div>
